Trying to fix Description on mobile

--- a/styles/my-styles.css
+++ b/styles/my-styles.css
@@ -43,7 +43,7 @@ figure {
     gap: 2em; 
     flex-direction: row;
     flex-wrap: wrap;    
-    /*justify-content: space-evenly;*/
+    justify-content: space-evenly;
     padding: 2em;}
 
 .flex-nested-container {
@@ -73,9 +73,8 @@ figure {
 
 /* This is trick to detect smartphones */
 @media all and (pointer:none) , (pointer:coarse) {
-    body{
-    background: rgb(230, 238, 241);
-    }
+    body{background: rgb(230, 238, 241);}
+
     .flex-container {flex-direction: row;}}
 
 .dropbtn {
